--- a/files/.zsh/history
+++ b/files/.zsh/history
@@ -11,3 +11,6 @@ setopt hist_ignore_space
 setopt hist_verify
 setopt inc_append_history
 setopt share_history # share command history data
+
+bindkey -v
+bindkey '^R' history-incremental-search-backward
